Alterando cor da toolbar

--- a/app/SINE/app/src/main/res/layout/activity_graphic.xml
+++ b/app/SINE/app/src/main/res/layout/activity_graphic.xml
@@ -21,7 +21,7 @@
 
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbar" />
+            layout="@layout/toolbar_media_salarial" />
     </LinearLayout>
 
     <TextView
