--- a/app/SINE/app/src/main/res/layout/activity_favorite.xml
+++ b/app/SINE/app/src/main/res/layout/activity_favorite.xml
@@ -12,80 +12,25 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:id="@+id/container_toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    <LinearLayout
+        android:id="@+id/container_toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-            <include
-                android:id="@+id/toolbar"
-                layout="@layout/toolbar" />
-        </LinearLayout>
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/toolbar_vagas_favoritas" />
+    </LinearLayout>
 
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+        <Button
+            android:text="Filtro"
+            android:id="@+id/filter"
+            android:onClick="filterClick"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
-            <LinearLayout
-                android:background="@color/colorPrimary"
-                android:layout_width="match_parent"
-                android:layout_height="44dp">
 
-                <TextView
-                    android:text="@string/filtro_favorite_activity"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/textView2"
-                    android:textSize="20dp"
-                    android:textColor="@color/textColorPrimary"
-                    android:layout_weight="1" />
-
-                <RadioGroup
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <LinearLayout
-                        android:layout_width="100dp"
-                        android:layout_height="45dp">
-                        <RadioButton
-                            android:text="@string/sem_filtro_favorite_activity"
-                            android:id="@+id/semfiltro"
-                            android:textColor="@color/textColorPrimary"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:checked="true"
-                            android:onClick="onRadioButtonClicked"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="100dp"
-                        android:layout_height="45dp">
-                        <RadioButton
-                            android:text="@string/ultima_vagas_favorite_activity"                            android:id="@+id/ultimasvagas"
-                            android:textColor="@color/textColorPrimary"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:onClick="onRadioButtonClicked"/>
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="100dp"
-                        android:layout_height="45dp">
-                        <RadioButton
-                            android:text="@string/maior_salario_favorite_activity"
-                            android:id="@+id/maiorsalario"
-                            android:textColor="@color/textColorPrimary"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:onClick="onRadioButtonClicked"/>
-                    </LinearLayout>
-
-                </RadioGroup>
-
-            </LinearLayout>
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/list_empregos_favoritos"
                 android:layout_width="match_parent"
@@ -97,7 +42,6 @@
                 android:paddingTop="@dimen/activity_vertical_margin"/>
         </LinearLayout>
 
-    </LinearLayout>
 
     <fragment
         android:id="@+id/fragment_navigation_drawer_favorite"
