--- a/app/SINE/app/src/main/res/layout/activity_search.xml
+++ b/app/SINE/app/src/main/res/layout/activity_search.xml
@@ -22,7 +22,7 @@
 
         <include
             android:id="@+id/toolbar"
-            layout="@layout/toolbar" />
+            layout="@layout/toolbar_pesquisa_vagas" />
     </LinearLayout>
 
         <LinearLayout
