--- a/app/SINE/app/src/main/res/layout/toolbar_media_salarial.xml
+++ b/app/SINE/app/src/main/res/layout/toolbar_media_salarial.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:minHeight="?attr/actionBarSize"
-    android:background="#fff59d"
+    android:background="#ffe082"
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
