--- a/app/SINE/app/src/main/res/layout/activity_favorite.xml
+++ b/app/SINE/app/src/main/res/layout/activity_favorite.xml
@@ -27,7 +27,7 @@
             android:text="Filtro"
             android:id="@+id/filter"
             android:onClick="filterClick"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
 
