--- a/app/SINE/app/src/main/res/layout/activity_result.xml
+++ b/app/SINE/app/src/main/res/layout/activity_result.xml
@@ -7,9 +7,9 @@
     android:orientation="vertical"
     tools:context="trabalho.sine.ResultActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
 
         <LinearLayout
@@ -25,6 +25,279 @@
 
 
         </LinearLayout>
+
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_below="@+id/container_toolbar"
+            android:layout_height="match_parent"
+            android:layout_above="@+id/relativeLayout"
+            android:layout_weight="1"
+            android:fillViewport="true">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical" >
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:gravity="center"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/titleLabel"
+                        android:layout_below="@+id/container_toolbar"
+                        android:layout_alignParentStart="true"
+                        android:src="@drawable/title"
+                        android:padding="20dp"
+                        android:layout_margin="0dp" />
+
+                    <TextView
+                        android:text=""
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_toEndOf="@+id/titleLabel"
+                        android:id="@+id/titleValue"
+                        android:layout_alignBottom="@+id/titleLabel"
+                        android:layout_alignTop="@+id/titleLabel"
+
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:gravity="center_vertical" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:id="@+id/moneyLabel"
+                        android:layout_below="@+id/titleLabel"
+                        android:layout_alignStart="@+id/titleLabel"
+                        android:src="@drawable/money"
+                        android:padding="20dp"
+                        android:layout_margin="0dp" />
+
+                    <TextView
+                        android:text=""
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/moneyLabel"
+                        android:layout_alignStart="@+id/titleValue"
+                        android:id="@+id/moneyValue"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:gravity="center_vertical" />
+                </LinearLayout>
+
+
+
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/moneyLabel"
+                        android:layout_alignStart="@+id/moneyLabel"
+                        android:id="@+id/cityLabel"
+                        android:src="@drawable/city"
+                        android:padding="20dp"
+                        android:layout_margin="0dp" />
+
+                    <TextView
+                        android:text=""
+
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/cityLabel"
+                        android:layout_alignStart="@+id/moneyValue"
+                        android:id="@+id/cityValue"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:gravity="center_vertical" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/cityLabel"
+                        android:layout_alignStart="@+id/cityLabel"
+
+                        android:id="@+id/addressLabel"
+                        android:src="@drawable/location"
+                        android:padding="20dp"
+                        android:layout_margin="0dp" />
+
+                    <TextView
+
+                        android:text=""
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/addressLabel"
+                        android:layout_alignStart="@id/cityValue"
+                        android:layout_toEndOf="@+id/titleValue"
+                        android:id="@+id/addressValue"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:gravity="center_vertical" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:src="@drawable/company"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/addressLabel"
+                        android:layout_alignStart="@+id/addressLabel"
+
+                        android:id="@+id/companyLabel"
+                        android:padding="20dp"
+                        android:layout_margin="0dp" />
+
+                    <TextView
+
+                        android:text=""
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/companyLabel"
+                        android:layout_toEndOf="@+id/cityValue"
+                        android:id="@+id/companyValue"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:gravity="center_vertical" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:layout_marginTop="0dp"
+                        android:src="@drawable/function"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/companyLabel"
+                        android:layout_alignStart="@+id/companyLabel"
+
+                        android:id="@+id/functionLabel"
+                        android:padding="20dp"
+                        android:layout_margin="0dp" />
+
+                    <TextView
+
+                        android:text=""
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignBottom="@+id/functionLabel"
+                        android:layout_toEndOf="@+id/companyValue"
+                        android:id="@+id/functionValue"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:gravity="center_vertical" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_margin="5dp">
+
+                    <ImageView
+                        android:src="@drawable/description"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@+id/functionLabel"
+                        android:layout_alignStart="@+id/functionLabel"
+                        android:layout_marginTop="0dp"
+                        android:id="@+id/descriptionLabel"
+                        android:padding="20dp"
+                        android:layout_margin="0dp" />
+
+                    <TextView
+
+                        android:text=""
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignTop="@+id/descriptionLabel"
+                        android:layout_alignStart="@id/functionValue"
+                        android:layout_toEndOf="@+id/addressValue"
+                        android:id="@+id/descriptionValue"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:gravity="center_vertical" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:layout_margin="5dp">
+
+                    <TextView
+                        android:text=""
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/urlValue"
+                        android:layout_alignTop="@+id/openLinkImage"
+                        android:layout_toEndOf="@+id/descriptionValue"
+                        android:layout_weight="1"
+                        android:ellipsize="none"
+                        android:gravity="center_vertical" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+        </ScrollView>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -67,171 +340,7 @@
         </RelativeLayout>
 
 
-        <TextView
-            android:text=""
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toEndOf="@+id/titleLabel"
-            android:layout_marginStart="22dp"
-            android:id="@+id/titleValue"
-            android:layout_alignBottom="@+id/titleLabel"
-            android:layout_alignTop="@+id/titleLabel"
-
-            />
-
-
-        <TextView
-            android:text=""
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/moneyLabel"
-            android:layout_alignStart="@+id/titleValue"
-            android:id="@+id/moneyValue"
-            />
-
-
-        <ImageView
-            android:layout_marginTop="25dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/moneyLabel"
-            android:layout_alignStart="@+id/moneyLabel"
-            android:id="@+id/cityLabel"
-            android:src="@drawable/city"/>
-
-
-        <TextView
-            android:text=""
-
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/cityLabel"
-            android:layout_alignStart="@+id/moneyValue"
-            android:id="@+id/cityValue" />
-
-
-        <ImageView
-            android:layout_marginTop="25dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/cityLabel"
-            android:layout_alignStart="@+id/cityLabel"
-
-            android:id="@+id/addressLabel"
-            android:src="@drawable/location"/>
-
-
-        <TextView
-
-            android:text=""
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/addressLabel"
-            android:layout_alignStart="@id/cityValue"
-            android:layout_toEndOf="@+id/titleValue"
-            android:id="@+id/addressValue" />
-
-
-        <ImageView
-            android:layout_marginTop="25dp"
-            android:src="@drawable/company"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/addressLabel"
-            android:layout_alignStart="@+id/addressLabel"
-
-            android:id="@+id/companyLabel" />
-
-
-        <TextView
-
-            android:text=""
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/companyLabel"
-            android:layout_alignStart="@id/addressValue"
-            android:layout_toEndOf="@+id/cityValue"
-            android:id="@+id/companyValue" />
-
-
-        <ImageView
-            android:layout_marginTop="25dp"
-            android:src="@drawable/function"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/companyLabel"
-            android:layout_alignStart="@+id/companyLabel"
-
-            android:id="@+id/functionLabel" />
-
-
-        <TextView
-
-            android:text=""
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/functionLabel"
-            android:layout_alignStart="@id/companyValue"
-            android:layout_toEndOf="@+id/companyValue"
-            android:id="@+id/functionValue" />
-
-
-        <ImageView
-            android:src="@drawable/description"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/functionLabel"
-            android:layout_alignStart="@+id/functionLabel"
-            android:layout_marginTop="25dp"
-            android:id="@+id/descriptionLabel" />
-
-
-        <TextView
-
-            android:text=""
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/descriptionLabel"
-            android:layout_alignStart="@id/functionValue"
-            android:layout_toEndOf="@+id/addressValue"
-            android:id="@+id/descriptionValue" />
-
-
-        <TextView
-            android:text=""
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/urlValue"
-            android:layout_alignTop="@+id/openLinkImage"
-            android:layout_toEndOf="@+id/descriptionValue" />
-
-
-
-
-        <ImageView
-            android:layout_marginTop="25dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-
-            android:id="@+id/moneyLabel"
-            android:layout_below="@+id/titleLabel"
-            android:layout_alignStart="@+id/titleLabel"
-            android:src="@drawable/money"/>
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="10dp"
-            android:id="@+id/titleLabel"
-            android:layout_below="@+id/container_toolbar"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="22dp"
-            android:src="@drawable/title"/>
-
-
-    </RelativeLayout>
-
-
+    </LinearLayout>
 
 
     <fragment
