--- a/app/SINE/app/src/main/res/layout/toolbar_vagas_favoritas.xml
+++ b/app/SINE/app/src/main/res/layout/toolbar_vagas_favoritas.xml
@@ -7,5 +7,6 @@
     android:minHeight="?attr/actionBarSize"
     android:background="#ffcc80"
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    local:titleTextColor="@color/colorPrimaryDark"
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
