--- a/app/SINE/app/src/main/res/menu/menu_drawer.xml
+++ b/app/SINE/app/src/main/res/menu/menu_drawer.xml
@@ -8,6 +8,7 @@
             <menu>
                 <item
                     android:id="@+id/home"
+                    android:icon="@drawable/home"
                     android:title="Home" />
             </menu>
         </item>
