--- a/app/SINE/app/src/main/res/layout-xlarge/content_favorite.xml
+++ b/app/SINE/app/src/main/res/layout-xlarge/content_favorite.xml
@@ -17,11 +17,7 @@
             android:id="@+id/list_empregos_favoritos"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:scrollbars="vertical"
-            android:paddingBottom="@dimen/activity_vertical_margin"
-            android:paddingLeft="@dimen/activity_horizontal_margin"
-            android:paddingRight="@dimen/activity_horizontal_margin"
-            android:paddingTop="@dimen/activity_vertical_margin"/>
+            android:scrollbars="vertical" />
     </LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
