--- a/app/SINE/app/src/main/res/layout-xlarge/list_view_adapter.xml
+++ b/app/SINE/app/src/main/res/layout-xlarge/list_view_adapter.xml
@@ -5,79 +5,93 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_gravity="center_vertical">
-
-        <ImageView
-            android:id="@+id/icons_empregos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="3dp"
-            android:tint="@color/black"
-            app:srcCompat="@drawable/job_icon" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/linearLayout3"
+    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:weightSum="1">
+        android:layout_margin="6dp"
+        app:cardCornerRadius="8dp"
+        app:cardElevation="3dp">
 
-        <TextView
-            android:id="@+id/vaga_nome"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:text="Titulo"
-            android:textAlignment="viewStart"
-            android:textColor="@color/black"
-            android:textSize="18sp"
-            android:textStyle="normal|bold" />
+            android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/vaga_empresa"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="2dp"
-            android:text="Empresa"
-            android:textAlignment="viewStart"
-            android:textColor="@color/place_autocomplete_search_text"
-            android:textSize="16sp" />
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center">
 
-        <TextView
-            android:id="@+id/vaga_endereco"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_margin="2dp"
-            android:text="Endereco"
-            android:textAlignment="viewStart"
-            android:textColor="@color/place_autocomplete_search_text"
-            android:textSize="16sp" />
+                <ImageView
+                    android:id="@+id/icons_empregos"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="3dp"
+                    android:tint="@color/black"
+                    app:srcCompat="@drawable/job_icon" />
+            </LinearLayout>
 
-    </LinearLayout>
+            <LinearLayout
+                android:id="@+id/linearLayout3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:weightSum="1">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:layout_gravity="center_vertical"
-        android:padding="10dp">
+                <TextView
+                    android:id="@+id/vaga_nome"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:text="Titulo"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/black"
+                    android:textSize="18sp"
+                    android:textStyle="normal|bold" />
 
-        <ImageButton
-            android:id="@+id/favorito"
-            android:layout_centerVertical="true"
-            android:layout_alignParentEnd="true"
-            android:background="@drawable/favorite_border"
-            android:layout_height="match_parent"
-            android:layout_width="match_parent" />
+                <TextView
+                    android:id="@+id/vaga_empresa"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="2dp"
+                    android:text="Empresa"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/place_autocomplete_search_text"
+                    android:textSize="16sp" />
 
-    </LinearLayout>
+                <TextView
+                    android:id="@+id/vaga_endereco"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_margin="2dp"
+                    android:text="Endereco"
+                    android:textAlignment="viewStart"
+                    android:textColor="@color/place_autocomplete_search_text"
+                    android:textSize="16sp" />
 
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:gravity="center"
+                android:padding="10dp">
+
+                <ImageButton
+                    android:id="@+id/favorito"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:background="@drawable/favorite_border" />
+
+            </LinearLayout>
+        </LinearLayout>
+    </android.support.v7.widget.CardView>
 </LinearLayout>
